# palworld-sav-api

./: .dockerignore  .gitignore  Dockerfile  README.md  archive.py  config.yaml  docker-compose.yml  logging_config.py  pyproject.toml
api/: app.py  config.py
api/controllers/: __init__.py  editor_controller.py  sav_controller.py
api/core/: archive.py  gvas.py  json_tools.py  noindent.py  palsav.py  paltypes.py  player.py  rawdata.py
api/core/commands/: convert.py  resave_test.py
api/core/rawdata/: base_camp.py  character.py  (+19 more)
api/core3/: gvas.py
api/schemas/: error.py  health.py  level.py  player.py
api/services/: editor.py  player.py  sav.py
inputs/: LevelMeta.sav  LevelMeta2.sav
inputs/Players/: 21402AC1000000000000000000000000.sav  4D54694E000000000000000000000000.sav  4D54694E000000000000000000000000.sav.json  61734CB1000000000000000000000000.sav  73AD69DA000000000000000000000000.sav  7A939818000000000000000000000000.sav  914D2C62000000000000000000000000.sav  9300BBEC000000000000000000000000.sav  A0FAA6CD000000000000000000000000.sav  CAE6C06A000000000000000000000000.sav  CD5ADA15000000000000000000000000.sav  D465320E000000000000000000000000.sav  ED7D51EF000000000000000000000000.sav  EFF5E630000000000000000000000000.sav  F8069513000000000000000000000000.sav
testsave/: Level.sav  Level.sav.json  LevelMeta2.sav
testsave/Players/: 73AD69DA000000000000000000000000.sav  7A939818000000000000000000000000.sav  9300BBEC000000000000000000000000.sav  CD5ADA15000000000000000000000000.sav  D465320E000000000000000000000000.sav  ED7D51EF000000000000000000000000.sav
(+5 files in other folders)
